Move temporary post folder

--- a/programming/_posts/2020-07-04-kcc2020.md
+++ b/programming/_posts/2020-07-04-kcc2020.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 소논문을 쓰고, KCC 2020 포스터 세션에 참여했다
+title: 소논문을 쓰고 KCC 2020 포스터 세션에 참여했다
 image: /assets/img/programming/200704/1.png
 comments: true
 ---
