--- a/programming/_posts/2020-07-04-kcc2020.md
+++ b/programming/_posts/2020-07-04-kcc2020.md
@@ -54,3 +54,7 @@ comments: true
 작성한 자료가 워낙 많아서, 만약 이 프로젝트를 카톡방에서 진행했으면 자료 관리하는 데만 수백 광년 걸렸을 것 같다...
 
 만약 주면에 슬랙을 사용해 보지 않은 개발자가 있다면 팀 프로젝트에서 사용하도록 꼭 한번쯤 권해 보고 싶다. 생산성이 정말 다르다.
+
+---
+
+8월 중에 해당 논문으로 학부생부문 장려상을 받았다. 이번 연구를 바탕으로 다음엔 더 좋은 결과를 낼 수 있었으면 한다.
