--- a/programming/_posts/2020-07-04-kcc2020.md
+++ b/programming/_posts/2020-07-04-kcc2020.md
@@ -1,11 +1,11 @@
 ---
 layout: post
-title: 소논문을 쓰고 KCC 2020 포스터 세션에 참여했다
+title: KCC 2020에 학부생 논문을 냈다
 image: /assets/img/programming/200704/1.png
 comments: true
 ---
 
-이번 7월 2일부터 4일까지 온라인으로 개최된 한국정보과학회 KCC2020에 학부생 소논문 자격으로 포스터 세션에 참여했다.
+이번 7월 2일부터 4일까지 온라인으로 개최된 한국정보과학회 KCC2020에 학부생 논문 자격으로 포스터 세션에 참여했다.
 내 연구주제는 현행 유튜브 영상 추천 알고리즘을 좀 더 효율적으로 개선하는 것이었다.
 쉽지 않은 주제였기 때문에 처음에는 프로젝트를 진행하는 게 좀 막막했지만, 팀원들의 도움 덕분에 어떻게 서비스 형태로 개발도 하고 논문도 완성해서 제출할 수 있었다.
 
@@ -58,3 +58,7 @@ comments: true
 ---
 
 8월 중에 해당 논문으로 학부생부문 장려상을 받았다. 이번 연구를 바탕으로 다음엔 더 좋은 결과를 낼 수 있었으면 한다.
+
+![7](/assets/img/programming/200704/7.png)
+
+추가로 이번 SW중심대학 교육페스티벌에 경희대학교 Profit Hunter 팀으로 논문 전시도 되었다. 다른 말로 표현하자면 그냥 전시만 되었다 ㅋㅋ...
