Modify some texts

--- a/programming/_posts/2021-03-02-develop-39cc.md
+++ b/programming/_posts/2021-03-02-develop-39cc.md
@@ -4,14 +4,15 @@ title: 모펀의 &#35;39CC 행사 페이지 개발에 참여했다
 image: /assets/img/programming/210302/0.jpg
 ---
 
-2020년 11월 모펀에서 주최한 [&#35;39CC](https://hatsunemiku.co.kr/contest/) 행사의 페이지 개발에 참여했다.
+2020년 11월 개최된 [&#35;39CC](https://hatsunemiku.co.kr/contest/) 행사의 페이지 개발에 참여했다.
 총 두 명이서 개발했고 나는 React를 사용하여 프론트엔드 개발 부분을 담당했다.
 외부 CSS 템플릿 안 쓰고 레이아웃부터 버튼까지, 처음부터 끝까지 CSS를 일일히 다 짰는데 정말 미련한 짓이었다는 걸 나중에야 깨달았다.
 개발 사이즈에 비해 삽질을 너무 많이 했던 개인적인 아쉬움이 남는 프로젝트.
 
-&#35;39CC는 [MoFun](http://mofun.co.kr/)에서 주최했던 하츠네 미쿠 일러스트 공모전 행사이다.
+&#35;39CC는 [모펀(MoFun)](http://mofun.co.kr/)에서 주최한 하츠네 미쿠 일러스트 공모전 행사이다.
 미쿠 외 다른 피아프로 캐릭터들로도 참여가 가능했지만 참가작 그리고 수상작 대부분이 미쿠였다.
 2020년 11월부터 일러스트 모집을 받기 시작해서 다음 년도 초에 유저 투표를 받았고, 2021년 3월 1일에 결과 발표를 끝으로 마무리되었다.
+비록 사모당펀은 폐업했지만 이런 서브컬쳐 관련 행사도 추후 꾸준히 열리지 않을까 기대가 된다.
 
 ![1](/assets/img/programming/210302/1.jpg)
 
@@ -40,3 +41,5 @@ image: /assets/img/programming/210302/0.jpg
 정도가 되시겠다. 그래도 취미와 연관이 있는 프로젝트다 보니 개발 자체는 재미있게 했다.
 내가 만든 페이지에 금손 분들의 작품이 올라가는 과정을 보는 게 참 뿌듯하기도 했고.
 기억에 남을 만한 덕업일체 프로젝트였던 것 같다.
+
+~~내용과 관련은 없지만 본인은 2014 유키미쿠 공식곡 [好き！雪！本気マジック](https://youtu.be/79N1O0lF0GY)를 제일 좋아한다ㅎ~~
