--- a/problemsolving/_posts/2021-12-05-ps.md
+++ b/problemsolving/_posts/2021-12-05-ps.md
@@ -1,6 +1,101 @@
 ---
 layout: post
-title: 파이썬 문제풀이 팁
+title: 코딩테스트에서 사용하는 파이썬 테크닉 모음
 ---
 
-문제풀이 팁을 적는 포스트
+알고리즘 문제를 풀 때 사용하는 기본적인 파이썬 코드 조각들을 모아 두었다. 써놓고도 주기적으로 까먹을 예정.
+
+## \# 입력, 출력
+### 파일에서 입력받기
+~~~~python
+# input.txt 안에 입력값 저장
+import sys
+sys.stdin = open("input.txt", 'r')
+string = input()
+~~~~
+
+### 숫자 입력 나눠서 받기
+~~~~python
+# 6 3
+N, M = map(int, input().split())
+~~~~
+
+### 숫자 입력 한꺼번에 받기
+~~~~python
+# 2 3 5 7 9 11
+nums = list(map(int, input().split())
+~~~~
+
+### 2차원 배열 받기
+~~~~python
+'''
+9 8 3 1
+5 2 4 7
+2 3 5 6
+5 2 3 4
+'''
+maze = [list(map(int, input().split())) for _ in range(4)]
+~~~~
+
+### 포맷팅 출력하기
+~~~~python
+result = 10
+print(f"result is {result}")    # 'result is 10'
+~~~~
+
+
+## \# 자료구조
+### 큐
+~~~~python
+from collections import deque
+q = deque()
+q.append(2)
+print(q.popleft())  # 2
+~~~~
+
+### 최소 힙
+~~~~python
+import heapq
+q = []
+heapq.heappush(q, (1, 'apple'))
+print(heapq.heappop(q)[1])    # 'apple'
+~~~~
+
+
+## 유틸리티 함수
+### 문자를 ASCII로 변환
+~~~~python
+print(ord('a'))    # 97
+~~~~
+
+
+## \# 기타 테크닉
+### list comprehension을 사용한 리스트 값 필터링
+~~~python
+arr = [7, 1, 2, 5, 4, 2, 0]
+pivot = 3
+left_side = [x for x in arr if x <= pivot]
+print(left_side)    # [1, 2, 2, 0]
+~~~
+
+### 튜플 리스트 정렬
+~~~python
+arr = [('apple', 17), ('banana', 8), ('candy', 3)]
+arr.sort(key=lambda x: x[1])
+print(arr)    # [('candy', 3), ('banana', 8), ('apple', 17)]
+~~~
+
+### for 반복문 인덱스 가져오기
+~~~python
+arr = ['a', 'b', 'c']
+for i, char in enumerate(arr):
+    print(f'{i}: {char} ', end='')   # 0: a 1: b 2: c 
+~~~
+
+### 두 배열 tuple로 묶기
+~~~python
+numbers = [1, 2, 3]
+letters = ["A", "B", "C"]
+for pair in zip(numbers, letters):
+    print(pair, end='')     # (1, 'A')(2, 'B')(3, 'C')
+~~~
