Add permutation and combinaton code

--- a/problemsolving/_posts/2021-12-05-ps.md
+++ b/problemsolving/_posts/2021-12-05-ps.md
@@ -69,6 +69,32 @@ print(ord('a'))    # 97
 ~~~~
 
 
+## 순열과 조합
+### 배열로 순열 생성
+~~~python
+from itertools import permutations
+data = ['A', 'B', 'C']
+result = list(permutations(data, 3))
+print(result)   # [('A', 'B', 'C'), ('A', 'C', 'B'), ..., ('C', 'B', 'A')]
+~~~
+
+### 배열로 조합 생성
+~~~python
+from itertools import combinations
+data = ['A', 'B', 'C']
+result = list(combinations(data, 2))
+print(result)   # [('A', 'B'), ('A', 'C'), ('B', 'C')]
+~~~
+
+### 배열로 중복 순열 생성
+~~~python
+from itertools import product
+data = ['A', 'B', 'C']
+result = list(product(data, repeat=2))
+print(result)   # [('A', 'A'), ('A', 'B'), ..., ('C', 'C')]
+~~~
+
+
 ## \# 기타 테크닉
 ### list comprehension을 사용한 리스트 값 필터링
 ~~~python
