--- a/problemsolving/_posts/2021-12-05-ps.md
+++ b/problemsolving/_posts/2021-12-05-ps.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: 코딩테스트에서 사용하는 파이썬 테크닉 모음
+image: /assets/img/problemsolving/211205/1.jpg
 ---
 
 알고리즘 문제를 풀 때 사용하는 기본적인 파이썬 코드 조각들을 모아 두었다. 써놓고도 주기적으로 까먹을 예정.
@@ -42,6 +43,17 @@ maze = [list(map(int, input().split())) for _ in range(4)]
 result = 10
 print(f"result is {result}")    # 'result is 10'
 ~~~~
+
+### 2차원 배열 예쁘게 출력하기
+~~~python
+arr = [[1, 2, 3], [4, 5, 6], [7, 8, 9]]
+print(*arr, sep='\n')
+'''
+1 2 3
+4 5 6
+7 8 9
+'''
+~~~
 
 
 ## \# 자료구조
