Add bisect library

--- a/problemsolving/_posts/2021-12-05-ps.md
+++ b/problemsolving/_posts/2021-12-05-ps.md
@@ -137,3 +137,12 @@ letters = ["A", "B", "C"]
 for pair in zip(numbers, letters):
     print(pair, end='')     # (1, 'A')(2, 'B')(3, 'C')
 ~~~
+
+### 이진 탐색
+~~~python
+from bisect import bisect_left, bisect_right
+numbers = [1, 4, 6, 8, 11, 19]
+target = 11
+print(bisect_left(numbers, target))     # 4
+print(bisect_right(numbers, target))     # 5
+~~~
