Change words to honorific

--- a/lifelog/_posts/2019-01-28-go-to-ski.md
+++ b/lifelog/_posts/2019-01-28-go-to-ski.md
@@ -1,25 +1,25 @@
 ---
 layout: post
-title: 스키장에 다녀왔다
+title: 스키장에 다녀왔습니다
 image: /assets/img/lifelog/190128/ski_in_night.jpg
 ---
 
-친구들끼리 스키를 타러 2박 3일로 무주 스키장에 다녀왔다.
-평소에는 액티비티라면 질색을 하지만 아주 예전에 스키를 딱 한 번 타 본 경험이 있어서 스키장으로 가게 되었다.
+친구들끼리 스키를 타러 2박 3일로 무주 스키장에 다녀왔습니다.
+평소에는 액티비티라면 질색을 하지만 아주 예전에 스키를 딱 한 번 타 본 경험이 있어서 그나마 뭘 하는지 알고는 있는 스키장으로 가게 되었습니다.
 
-야간에 하루, 주간에 하루씩 리프트 티켓을 샀다. 확실히 성수기인데도 야간에는 사람이 많이 없어서 쾌적했다.
-예전에 스키를 한 번 탔다지만 처음 탈 때는 감이 하나도 없어서 움직이는 것도 버거웠다.
-그래도 리프트 타고 올라가서 내려오니까 얼추 내려오긴 내려오겠더라. 넘어지긴 많이 넘어졌지만.
+야간에 하루, 주간에 하루씩 리프트 티켓을 샀습니다. 확실히 성수기인데도 야간에는 사람이 많이 없어서 쾌적했습니다.
+예전에 스키를 한 번 탔다지만 처음 탈 때는 감이 하나도 없어서 움직이는 것도 버거웠습니다.
+그래도 리프트 타고 올라가서 내려오니까 얼추 내려오긴 내려오겠더라구요. 넘어지긴 많이 넘어졌지만요.
 
 ![ski_in_afternoon](/assets/img/lifelog/190128/ski_in_afternoon.jpg)
 
-그런데 다음 날 낮에 타려니 사람이 너무 많아서 제대로 타기가 힘들었다.
+그런데 다음 날 낮에 타려니 사람이 너무 많아서 제대로 타기가 힘들었습니다.
 리프트 타고 올라가는 줄이 긴 것은 차처하거니와,
-스키 타고 내려올 때 저 많은 사람들을 다 피해서 내려와야 하는데 약간 탄막 피하는 느낌이었다. ~~동방?~~
+스키 타고 내려올 때 저 많은 사람들을 다 피해서 내려와야 하는데 약간 탄막 피하는 느낌이었습니다. ~~동방?~~
 특히 사진의 오른쪽 코스가 초심자 코스인데, 여기에 주저앉아 있는 사람이 너무 많아서
-오히려 중급자 코스보다 사고가 더 많이 날 것 같았다.
+오히려 중급자 코스보다 사고가 더 많이 날 것 같았습니다.
 
 ![boardgame](/assets/img/lifelog/190128/boardgame.jpg)
 
-결국 스키는 적당히 타고 무주까지 와서 보드게임이나 했다.
-다음 번엔 낮에는 스키 절대 안 탈란다. (사실 히키코모리한테는 너무 빡센 액티비티라 다신 스키 타러 안 올 것 같긴 하다)
+결국 스키는 적당히 타고 무주까지 와서 보드게임이나 했습니다.
+다음 번엔 낮에는 스키 절대 안 타려구요. (사실 히키코모리한테는 너무 빡센 액티비티라 다신 스키 타러 안 올 것 같긴 해요)
