Change words to honorific

--- a/programming/_posts/2020-07-04-kcc2020.md
+++ b/programming/_posts/2020-07-04-kcc2020.md
@@ -1,63 +1,58 @@
 ---
 layout: post
-title: KCC 2020에 학부생 논문을 냈다
+title: KCC 2020에 학부생 논문을 냈습니다
 image: /assets/img/programming/200704/1.png
 ---
 
-이번 7월 2일부터 4일까지 온라인으로 개최된 한국정보과학회 KCC2020에 학부생 논문 자격으로 포스터 세션에 참여했다.
-내 연구주제는 현행 유튜브 영상 추천 알고리즘을 좀 더 효율적으로 개선하는 것이었다.
-쉽지 않은 주제였기 때문에 처음에는 프로젝트를 진행하는 게 좀 막막했지만, 팀원들의 도움 덕분에 어떻게 서비스 형태로 개발도 하고 논문도 완성해서 제출할 수 있었다.
+이번 7월 2일부터 4일까지 온라인으로 개최된 한국정보과학회 KCC2020에 학부생 논문 자격으로 포스터 세션에 참여했습니다.
+제 연구주제는 현행 유튜브 영상 추천 알고리즘을 좀 더 효율적으로 개선하는 것이었습니다.
+쉽지 않은 주제였기 때문에 처음에는 프로젝트를 진행하는 게 막막했지만, 팀원들의 도움 덕분에 어떻게 서비스 형태로 개발도 하고 논문도 완성해서 제출할 수 있었습니다.
 
-구체적으로 설명하자면, 우리가 작성한 논문의 제목은 **비디오 벡터를 이용한 내용 기반 유튜브 영상 추천 시스템**이었다.
-현재 유튜브 추천 알고리즘은 영상 내용을 동적으로 분석하지는 않고, 다른 메타 요소들(영상 설명, 조회수, 영상 시청 유형 등)을 이용해 간접적으로 영상 관련도를 예측하고 있다.
-그런데 영상 자체를 분석하는 기술도 꽤 정확도 높은 수준으로 발전해 왔으므로, 영상을 동적으로 분석하면 더 정확도 높은 추천 결과를 얻을 수 있지 않을까? 하는 게 핵심 발상이었다.
+구체적으로 설명하자면 저희가 작성한 논문의 제목은 **비디오 벡터를 이용한 내용 기반 유튜브 영상 추천 시스템**이었습니다.
+현재 유튜브 추천 알고리즘은 영상 내용을 동적으로 분석하지는 않고, 다른 메타 요소들(영상 설명, 조회수, 영상 시청 유형 등)을 이용해 간접적으로 영상 관련도를 예측하고 있습니다.
+그런데 영상 자체를 분석하는 기술도 꽤 정확도 높은 수준으로 발전해 왔으므로, 영상을 동적으로 분석하면 더 정확도 높은 추천 결과를 얻을 수 있지 않을까? 하는 게 핵심 발상이었습니다.
 
 ![2](/assets/img/programming/200704/2.png)
 
 영상에서 태그를 추출하고, 태그를 워드 벡터화시키고, 그 벡터들을 모아 비디오 벡터로 만드는 등..
-영상을 대표하는 비디오 벡터를 만들어서 각 비디오 벡터 간의 유사도를 계산하는 것이 우리가 만든 추천 모듈의 코어 알고리즘이다.
+영상을 대표하는 비디오 벡터를 만들어서 각 비디오 벡터 간의 유사도를 계산하는 것이 저희가 만든 추천 모듈의 코어 알고리즘입니다.
 추천하는 유튜브 영상들은 [Youtube-8M 3rd Dataset](https://research.google.com/youtube8m/download.html)을 사용했으며
 자세한 구현 내용은 해당 프로젝트의 [Github 리포지토리](https://github.com/Esot3riA/youtube-video-recommender)나
-[논문](https://github.com/Esot3riA/youtube-video-recommender/blob/master/200608_KCC_%EB%B9%84%EB%94%94%EC%98%A4_%EB%B2%A1%ED%84%B0%EB%A5%BC_%EC%9D%B4%EC%9A%A9%ED%95%9C_%EB%82%B4%EC%9A%A9_%EA%B8%B0%EB%B0%98_%EC%9C%A0%ED%8A%9C%EB%B8%8C_%EC%98%81%EC%83%81_%EC%B6%94%EC%B2%9C_%EC%8B%9C%EC%8A%A4%ED%85%9C.pdf)에서 확인할 수 있다.
+[논문](https://github.com/Esot3riA/youtube-video-recommender/blob/master/200608_KCC_%EB%B9%84%EB%94%94%EC%98%A4_%EB%B2%A1%ED%84%B0%EB%A5%BC_%EC%9D%B4%EC%9A%A9%ED%95%9C_%EB%82%B4%EC%9A%A9_%EA%B8%B0%EB%B0%98_%EC%9C%A0%ED%8A%9C%EB%B8%8C_%EC%98%81%EC%83%81_%EC%B6%94%EC%B2%9C_%EC%8B%9C%EC%8A%A4%ED%85%9C.pdf)에서 확인할 수 있습니다.
 
 ![5](/assets/img/programming/200704/5.png)
 
-뭔가 복잡하게 써 놨는데 엔드 유저 면에서 보자면 **사용자가 영상을 업로드하면 내용 면에서 연관이 있는 유튜브 영상 링크들을 추천해주는 시스템** 으로 요약이 가능하다.
-나는 오직 내부 로직 구현밖에 한 게 없는데 웹 서비스화는 우리 팀원이 다 해 주었다. 
+뭔가 복잡해 보이지만 **사용자가 영상을 업로드하면 내용 면에서 연관이 있는 유튜브 영상 링크들을 추천해주는 시스템** 으로 요약할 수 있겠습니다.
 
-다만 구현이 끝난 지금도 좀 아쉬운 점이 많긴 하다. 논문 결과만 보자면 나름 괜찮은 정확도를 보이고 있긴 하나
-이게 과연 좋은 아이디어였을까, 비디오 벡터를 만드는 알고리즘이 핵심인데 이게 실제로 개선의 여지가 있을까 등등 답이 안 나오는 문제들 때문에 계속 고민했다.
-비디오 처리에 대한 도메인 지식이 없었기 때문에 프로젝트 전반적으로 *과연 이 아이디어가 진짜 될까???* 하는 불확실함이 깔려 있던 것 같다.
-~~사실 이 부분은 대학원을 가지 않으면 해결이 안 될 것 같다;;~~
+다만 구현이 끝난 지금도 아쉬운 점이 있습니다. 논문 결과만 보자면 나름 괜찮은 정확도를 보이고 있긴 하나
+이게 과연 좋은 아이디어였을까, 비디오 벡터를 만드는 알고리즘이 핵심인데 이게 실제로 개선의 여지가 있을까 등등 답이 안 나오는 문제들 때문에 계속 고민했습니다.
+비디오 처리에 대한 도메인 지식이 없었기 때문에 프로젝트 전반적으로 *과연 이 아이디어가 진짜 될까???* 하는 불확실함이 깔려 있었어요.
+~~사실 이 부분은 대학원을 가지 않으면 해결이 안 될 것 같지만요;;~~
 
 무엇보다 논문에서는 영상에서 먼저 태그 벡터를 뽑아낸 후에 이걸 비디오 벡터로 변환하는 과정을 거치는데,
-태그 벡터를 거치지 않고 영상 자체의 피쳐만 분석해서 비디오 벡터를 생성하는 방법도 있을 것 같기도 하다.
-사실 이것도 불확실한 추론의 영역이긴 하지만, 태그 벡터 생성 과정을 생략하면 더 좋은 결과를 낼 수 있을 것 같다.
+태그 벡터를 거치지 않고 영상 자체의 피쳐만 분석해서 비디오 벡터를 생성하는 방법도 있을 것 같습니다.
+사실 이것도 불확실한 추론의 영역이긴 하지만, 태그 벡터 생성 과정을 생략하면 더 좋은 결과를 낼 수 있을 것이라고 생각합니다.
 
 ![3](/assets/img/programming/200704/4.png)
 
-원래는 부산 벡스코에서 열리는 오프라인 학술 행사였는데 이번 회차에는 코로나 시국 때문에 온라인으로 전환해서 개최되었다.
-그래서 포스터 세션이지만 포스터를 만들지 않고 동영상으로 대체해서 웹에다가 공개하는 식으로 진행되었다.
-포스터 만드는 게 귀찮아서 꽤나 심리적 압박이 됐었는데 이건 좀 다행이었다. 
+원래는 부산 벡스코에서 열리는 오프라인 학술 행사였는데 이번 회차에는 코로나 시국 때문에 온라인으로 전환해서 개최되었습니다.
+그래서 포스터 세션이지만 포스터를 만들지 않고 동영상으로 대체해서 웹에다가 공개하는 식으로 진행되었습니다.
+포스터 만드는 게 귀찮아서 꽤나 심리적 압박이 됐었는데 포스터를 만들지 않아도 되어 다행이었네요. 
 
 ![4](/assets/img/programming/200704/3.png)
 
-아무튼 2020 한국컴퓨터종합학술대회 논문집 509번(pp.1495-1497)에 해당 소논문이 등록된 것까지 확인했다.
-학부생 신분으로 논문을 쓰게 될 줄은 몰랐는데 어떻게 학술집까지 등록이 되어 조금 뜻깊다.
-이번 학기에는 코딩한 양보다 논문 혹은 보고서 쓴 양이 훨씬 많은 만큼, 방학 때는 개발자로서의 내실을 좀 더 탄탄히 다져야겠다고 생각 중이다.
+아무튼 2020 한국컴퓨터종합학술대회 논문집 509번(pp.1495-1497)에 해당 소논문이 등록된 것까지 확인했습니다.
+학부생 신분으로 논문을 쓰게 될 줄은 몰랐는데 어떻게 학술집까지 등록이 되어 뜻깊습니다.
+이번 학기에는 코딩한 양보다 논문 혹은 보고서 쓴 양이 훨씬 많은 만큼, 방학 때는 개발자로서의 내실을 좀 더 탄탄히 다져야겠네요.
 
 ![6](/assets/img/programming/200704/6.png)
 
-아, 프로젝트에 직접적으로 관련된 이야기는 아니지만 코딩 프로젝트 할 때 슬랙을 도입하는 게 참 좋은 것 같다고도 다시금 느꼈다.
-채널을 여러 개 파서 각종 자료들을 박제해 둘 수 있다는 게 정말 좋고, 시간대 별 알람 설정으로 새벽에도 부담없이 자료들을 공유할 수 있다는 것도 큰 강점이었다.
-작성한 자료가 워낙 많아서, 만약 이 프로젝트를 카톡방에서 진행했으면 자료 관리하는 데만 수백 광년 걸렸을 것 같다...
+아, 프로젝트에 직접적으로 관련된 이야기는 아니지만 코딩 프로젝트 할 때 슬랙을 도입하는 게 참 좋은 것 같다고도 다시금 느꼈습니다.
+채널을 여러 개 파서 각종 자료들을 박제해 둘 수 있다는 게 정말 좋고, 시간대 별 알람 설정으로 새벽에도 부담없이 자료들을 공유할 수 있다는 것도 큰 강점이었습니다.
+작성한 자료가 워낙 많아서, 만약 이 프로젝트를 카톡방에서 진행했으면 자료 관리하는 데만 수백 광년 걸렸을 것 같아요...
 
-만약 주면에 슬랙을 사용해 보지 않은 개발자가 있다면 팀 프로젝트에서 사용하도록 꼭 한번쯤 권해 보고 싶다. 생산성이 정말 다르다.
+만약 주면에 슬랙을 사용해 보지 않은 개발자가 있다면 팀 프로젝트에서 사용하도록 꼭 한번쯤 권해 보고 싶습니다. 생산성이 정말 달라요.
 
 ---
 
-8월 중에 해당 논문으로 학부생부문 장려상을 받았다. 이번 연구를 바탕으로 다음엔 더 좋은 결과를 낼 수 있었으면 한다.
-
-![7](/assets/img/programming/200704/7.png)
-
-추가로 이번 SW중심대학 교육페스티벌에 경희대학교 Profit Hunter 팀으로 논문 전시도 되었다. 다른 말로 표현하자면 그냥 전시만 되었다 ㅋㅋ...
+8월 중에 해당 논문으로 학부생부문 장려상을 받았습니다. 이번 연구를 바탕으로 다음엔 더 좋은 결과를 낼 수 있었으면 합니다.
