--- a/programming/_posts/2022-01-02-ps.md
+++ b/programming/_posts/2022-01-02-ps.md
@@ -4,7 +4,7 @@ title: 코딩테스트에서 사용하는 파이썬 테크닉 모음
 image: /assets/img/programming/220102/1.jpg
 ---
 
-알고리즘 문제를 풀 때 사용하는 기본적인 파이썬 코드 조각들을 모아 두었다. 써놓고도 주기적으로 까먹을 예정.
+알고리즘 문제를 풀 때 사용하는 기본적인 파이썬 코드 조각들을 모아 두었습니다. 써놓고도 주기적으로 까먹을 예정이지만요.
 
 ## \# 입력, 출력
 ### 파일에서 입력받기
